# deepin-repair-tools

./: .clog.toml  CHANGELOG.md  CMakeLists.txt  README.md  com.deepin.repair-tools.policy  com.deepin.repair-tools.policy.tmp  deepin-repair-tools-pkexec  deepin-repair-tools.desktop  technology-overview.md  translate_generation.sh
.tx/: config  ts2desktop
debian/: changelog  control  copyright  deepin-repair-tools.install  rules
manual/en_US/: index.md
manual/zh_CN/: index.md
plugins/: CMakeLists.txt
plugins/disk_clean/: CMakeLists.txt  disk-clean.json  disk_clean.sh  disk_clean_plugin.cpp  disk_clean_plugin.h  disk_size.sh  diskcleanthread.cpp  diskcleanthread.h  diskcleanwidget.cpp  diskcleanwidget.h  resources.qrc
plugins/dpkg_repair/: CMakeLists.txt  dpkg-repair.json  dpkg_repair.sh  dpkg_repair_plugin.cpp  dpkg_repair_plugin.h  dpkgrepairthread.cpp  dpkgrepairthread.h  dpkgrepairwidget.cpp  dpkgrepairwidget.h  resources.qrc
plugins/grub_repair/: CMakeLists.txt  grub-repair.json  grub-repair.sh  grub_repair_plugin.cpp  grub_repair_plugin.h  grubrepairthread.cpp  grubrepairthread.h  grubrepairwidget.cpp  grubrepairwidget.h  resources_grub_repair.qrc
plugins/password_reset/: CMakeLists.txt  password-reset.json  password_reset.sh  password_reset_plugin.cpp  password_reset_plugin.h  passwordresetthread.cpp  passwordresetthread.h  passwordresetwidget.cpp  passwordresetwidget.h  resources_password_reset.qrc
plugins/permissions_repair/: CMakeLists.txt  permissions-repair.json  permissions-repair.sh  permissions_repair_plugin.cpp  permissions_repair_plugin.h  permissionsrepairthread.cpp  permissionsrepairthread.h  permissionsrepairwidget.cpp  permissionsrepairwidget.h  resources_permissions_repair.qrc
src/: chroot_hook.sh  chrootbindguard.cpp  chrootbindguard.h  chrootprocess.cpp  chrootprocess.h  diskinfo.cpp  diskinfo.h  diskutils.cpp  diskutils.h  fscheckthread.cpp  fscheckthread.h  fsck.sh  fsck_check.sh  fsck_repair.sh  fsrepairthread.cpp  fsrepairthread.h  list_user_info.sh  main.cpp  open_link.sh  pluginnavgation.cpp  pluginnavgation.h  pluginsloader.cpp  pluginsloader.h  repairtools.cpp  repairtools.h  repairtoolsinterface.h  repairtoolsproxy.h  scanningpage.cpp  scanningpage.h  toolsmodel.cpp  toolsmodel.h  toolspage.cpp  toolspage.h
translations/: deepin-repair-tools.ts  deepin-repair-tools_am_ET.ts  deepin-repair-tools_ar.ts  deepin-repair-tools_ast.ts  deepin-repair-tools_bg.ts  deepin-repair-tools_ca.ts  deepin-repair-tools_cs.ts  deepin-repair-tools_da.ts  deepin-repair-tools_de.ts  deepin-repair-tools_es.ts  deepin-repair-tools_es_419.ts  deepin-repair-tools_et.ts  deepin-repair-tools_fi.ts  deepin-repair-tools_fr.ts  deepin-repair-tools_hr.ts  deepin-repair-tools_hu.ts  deepin-repair-tools_id.ts  deepin-repair-tools_it.ts  deepin-repair-tools_ko.ts  deepin-repair-tools_lt.ts  deepin-repair-tools_mn.ts  deepin-repair-tools_ms.ts  deepin-repair-tools_nb.ts  deepin-repair-tools_ne.ts  deepin-repair-tools_nl.ts  deepin-repair-tools_pl.ts  deepin-repair-tools_pl_PL.ts  deepin-repair-tools_pt.ts  deepin-repair-tools_pt_BR.ts  deepin-repair-tools_ru.ts  deepin-repair-tools_sk.ts  deepin-repair-tools_sl.ts  deepin-repair-tools_sr.ts  deepin-repair-tools_tr.ts  deepin-repair-tools_uk.ts  deepin-repair-tools_zh_CN.ts  deepin-repair-tools_zh_TW.ts
translations/desktop/: desktop.ts  desktop_ar.ts  desktop_ast.ts  desktop_bg.ts  desktop_ca.ts  desktop_cs.ts  desktop_da.ts  desktop_de.ts  desktop_es.ts  desktop_es_419.ts  desktop_fi.ts  desktop_fr.ts  desktop_hu.ts  desktop_id.ts  desktop_it.ts  desktop_ko.ts  desktop_lt.ts  desktop_ms.ts  desktop_ne.ts  desktop_nl.ts  desktop_pl.ts  desktop_pt.ts  desktop_pt_BR.ts  desktop_ru.ts  desktop_sk.ts  desktop_sq.ts  desktop_sr.ts  desktop_tr.ts  desktop_uk.ts  desktop_zh_CN.ts  desktop_zh_TW.ts
translations/policy/: policy.ts
